add GetProduct servie for get a product with specific ID
